# CheckersAI

./: .gitignore  CMakeLists.txt  pu.sh
doc/: Compte_Rendu.tex
include/: AI.h  Board.h  Direction.h  MonteCarloNode.h  Move.h  MoveNode.h  MoveStack.h  MoveTree.h  NegMax.h  NegMaxNode.h  Pawn.h  PawnMove.h  RandomCarlo.h  SSS.h  SSSNode.h  Turn.h
src/: AI.cpp  Board.cpp  MonteCarloNode.cpp  Move.cpp  MoveNode.cpp  MoveStack.cpp  MoveTree.cpp  NegMax.cpp  NegMaxNode.cpp  Pawn.cpp  PawnMove.cpp  RandomCarlo.cpp  SSS.cpp  SSSNode.cpp  Turn.cpp  main.cpp
